# Tensegrity

./: README.md
2d-tensegrity-sim/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
2d-tensegrity-sim/TensegritySim/: __init__.py  data_structures.py  tensegrity_solver.py  visualization.py  yaml_parser.py
2d-tensegrity-sim/docs/sphinx/: Makefile  conf.py  index.rst
2d-tensegrity-sim/docs/sphinx/content/: README.md  setup.md  yaml.md
2d-tensegrity-sim/figs/: data_structures.plantuml  tensegrity_solver.plantuml  visualization.plantuml
2d-tensegrity-sim/tests/: test_optimization.py
2d-tensegrity-sim/yaml/: 1-box.yaml  2-box-connected.yaml  2-box-force.yaml  2-box.yaml  2x10-cylinder.yaml  3Bar.yaml  6-box-cylinder.yaml  6-box.yaml  cylinder.yaml
matlab-tensegrity-computer-model/: pos_1D.m  pos_2D.m
motor-control/: README.md  XBOX Controller.md  package.xml  setup.cfg  setup.py
motor-control/elbow_brace/: StepperMotor.py  motor_control.py
motor-control/launch/: elbow_brace_launch.py
singing-strings-optimizer/: .gitmodules  3Bar.yaml  6Bar.yaml  README.md  frequencies.txt  requirements.txt
singing-strings-optimizer/src/: ToDo.txt  freqCalc.py  main.py  toEqualTen.py
tactile-sensor/: CMakeLists.txt  README.md  package.xml
tactile-sensor/arduino/: README.md
tactile-sensor/fabric_sensors/: README.md
tactile-sensor/launch/: tactile_plotter.launch  tactile_repeater.launch  tactile_repeater_left.launch  (+1 more)
tensegrity-definition/: .editorconfig  .gitignore  README.md  requirements.txt
wrist-cuff-matlab/: MatLabfromArduinoResistances.m
(+184 files in other folders)
